# ambient-display

./: .env.example  .gitignore  .prettierignore  AGENTS.md  PLAN.md  PROGRESS.md  README.md  ambient-glass-PLAN.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
src/: App.tsx  bootstrap.ts  main.tsx
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: apply_wallpaper_scene.toml  begin_google_calendar_oauth.toml  close_in_app_wallpaper.toml  complete_google_calendar_oauth.toml  configure_wallpaper_engine.toml  create_google_calendar_event.toml  delete_provider_secret.toml  delete_wallpaper_asset.toml  disconnect_google_calendar.toml  dismiss_native_alarm.toml  get_display_monitors.toml  get_display_window_state.toml  get_github_commits.toml  get_google_calendar_today.toml  get_native_alarm_scheduler_status.toml  get_secure_token_storage_status.toml  get_wallpaper_engine_status.toml  list_native_alarms.toml  list_wallpaper_library.toml  mark_overlay_ready.toml  pick_and_import_wallpapers.toml  quit_application.toml  refresh_sports.toml  reveal_wallpaper_library.toml  save_provider_secret.toml  schedule_native_alarm.toml  set_display_monitor.toml  set_display_window_mode.toml  snooze_native_alarm.toml  test_native_alarm.toml  test_wallpaper_scene.toml  transcribe_audio.toml
src-tauri/src/: alarms.rs  lib.rs  main.rs
src-tauri/src/commands/: alarms.rs  mod.rs  providers.rs  wallpaper.rs  windowing.rs
src-tauri/src/providers/: credentials.rs  mod.rs
src-tauri/src/wallpaper/: library.rs  mod.rs
src-tauri/src/windowing/: mod.rs
(+79 files in other folders)
