[package]
name = "ambient-glass"
version = "0.1.0"
description = "Ambient Glass native desktop shell"
authors = ["Ambient Glass contributors"]
edition = "2021"
rust-version = "1.77.2"
license = "UNLICENSED"

[lib]
name = "ambient_glass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "=0.22.1"
chrono = { version = "=0.4.45", default-features = false, features = ["clock", "std"] }
futures-util = "=0.3.32"
keyring = { version = "=3.6.3", default-features = false, features = ["apple-native", "windows-native"] }
log = "0.4"
rand = "=0.8.5"
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "multipart", "rustls-tls-webpki-roots", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "=0.10.8"
tauri = { version = "2", features = [] }
tauri-plugin-autostart = "=2.5.1"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "=2.3.3"
tauri-plugin-opener = "2"
tauri-plugin-store = "=2.4.3"
# `tauri-plugin-notification` currently accepts newer `time` releases whose
# MSRV exceeds this app's 1.77.2 baseline. Keep resolution deterministic until
# the desktop toolchain baseline is intentionally raised.
time = "=0.3.41"

# Registry discovery is compiled only for the actual Wallpaper Engine platform.
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.56"
windows-sys = { version = "=0.59.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
